; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_regrename.c_rest_of_handle_regrename.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_regrename.c_rest_of_handle_regrename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag_rename_registers = common dso_local global i64 0, align 8
@flag_cprop_registers = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @rest_of_handle_regrename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rest_of_handle_regrename() #0 {
  %1 = load i64, i64* @flag_rename_registers, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @regrename_optimize()
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i64, i64* @flag_cprop_registers, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32 (...) @copyprop_hardreg_forward()
  br label %10

10:                                               ; preds = %8, %5
  ret i32 0
}

declare dso_local i32 @regrename_optimize(...) #1

declare dso_local i32 @copyprop_hardreg_forward(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
